<resources>
    <string name="app_name">MessageTimer</string>
    <string name="action_share">Share</string>
    <string name="title_activity_about">About</string>
    <string name="main_fragment">Main</string>
    <string name="action_about">About</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string-array name="templates">
        <item>To add templates click button below</item>
    </string-array>
    <string-array name="sendorders">
        <item>Send orders will appear here</item>
    </string-array>
    <string-array name="drawer_options">
        <item>Home</item>
        <item>Templates</item>
        <item>Send orders</item>
    </string-array>
    <string name="open_drawer">Open drawer</string>
    <string name="close_drawer">Close drawer</string>
    <string name="template_hint">Enter custom template</string>
    <string name="confirm">Confirm</string>
    <string name="cancel">Cancel</string>
    <string name="add_template">Add template</string>
    <string name="to_hint">To</string>
    <string name="recipent">Enter number</string>

    <string name="message">Message</string>
    <string name="send">send</string>
    <string name="time">time</string>
    <string name="settimer">Set timer</string>
    <string name="setclock">Set clock</string>
    <string name="Timer">Timer</string>
    <string name="Clock">Clock</string>
    <string name="hmsFormat">\"%02d:%02d:%02d\"</string>
    <string name="empty_timer">00:00:00</string>
    <string name="InProgress">In Progress</string>
    <string name="about">About</string>
    <string name="Cheshie">Cheshie</string>
    <string name="about_the_app">Hope you like the app.</string>
    <string name="sig">Cheshie</string>
</resources>
