<?xml version="1.0" encoding="utf-8"?>
<GridLayout xmlns:android="http://schemas.android.com/apk/res/android"
xmlns:app="http://schemas.android.com/apk/res-auto"
xmlns:tools="http://schemas.android.com/tools"
android:layout_width="fill_parent"
android:layout_height="fill_parent"
android:paddingBottom="16dp"
android:paddingLeft="16dp"
android:paddingRight="16dp"
android:paddingTop="16dp"
android:columnCount="3"
tools:context=".MainActivity">

<TextView
android:layout_width="wrap_content"
android:layout_height="wrap_content"
android:layout_row="0"
android:layout_column="0"
android:layout_columnSpan="1"
android:text="@string/to_hint" />

<EditText
android:id="@+id/phone_number"
android:layout_width="wrap_content"
android:layout_height="wrap_content"
android:layout_gravity="fill_horizontal"
android:layout_row="0"
android:layout_column="1"
android:layout_columnSpan="2"
android:hint="@string/recipent"
/>

<EditText
android:id="@+id/message_text"
android:layout_width="wrap_content"
android:layout_height="wrap_content"
android:layout_gravity="fill"
android:gravity="top"
android:layout_row="1"
android:layout_column="0"
android:layout_columnSpan="3"
android:hint="@string/message"
/>

<Button
android:id="@+id/set_time"
android:layout_width="wrap_content"
android:layout_height="wrap_content"
android:layout_gravity="center_vertical"
android:text="@string/time"
android:textColor="#FFFFFF"
android:background="#14BCFF"
android:layout_row="2"
android:layout_column="0"
android:textStyle="bold"
/>

<RadioGroup
android:id="@+id/radio_group"
android:layout_width="wrap_content"
android:layout_height="wrap_content"
android:layout_gravity="center_horizontal"
android:layout_row="2"
android:layout_column="1"
android:orientation="vertical"
android:checkedButton="@+id/radio_setclock">

<RadioButton
android:id="@+id/radiosettimer"
android:layout_width="wrap_content"
android:layout_height="wrap_content"
android:text="@string/settimer"
android:focusedByDefault="true"/>
<!--android:onClick="onRadioButtonClicked"-->


<RadioButton
android:id="@+id/radio_setclock"
android:layout_width="wrap_content"
android:layout_height="wrap_content"
android:text="@string/setclock"
    />
    <!--android:onClick="onRadioButtonClicked"-->


</RadioGroup>

<Button
android:id="@+id/send"
android:layout_width="wrap_content"
android:layout_height="wrap_content"
android:textColor="#FFFFFF"
android:textColorHint="#FFFFFF"
android:background="#14BCFF"
android:layout_row="2"
android:layout_column="2"
android:layout_gravity="center_vertical"
android:text="@string/send"
android:textStyle="bold"
/>

    </GridLayout>