<?xml version="1.0" encoding="utf-8"?>
<GridLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="horizontal"
    android:columnCount="1"
    tools:context=".AboutFragment">


    <ImageView
        android:layout_marginTop="20dp"
        android:id="@+id/chimage"
        android:layout_width="match_parent"
        android:layout_height="300dp"
        android:contentDescription="@string/Cheshie"
        android:src="@drawable/tzxwufhb" />

    <TextView
        android:id="@+id/about"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_gravity="center"
        android:textSize="20sp"
        android:text="@string/about_the_app" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:gravity="center"
        android:text="@string/sig"
        android:textSize="20sp" />

</GridLayout>